Archive2/73/3f202a74d5a43d/output
main.cpp: In function 'int main()':
main.cpp:16:7: error: uninitialized const member in 'struct A'
     A a;
       ^
main.cpp:10:20: note: 'A::b' should be initialized
     const struct B b;
                    ^
main.cpp:16:7: warning: unused variable 'a' [-Wunused-variable]
     A a;
       ^
